# Cineflow

./: .env.example  .gitignore  Dockerfile.api  Dockerfile.dashboard  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/cineflow/: runner.py
src/cineflow/api/: main.py
src/cineflow/dashboard/: app.py
src/cineflow/dq/: checks.py
src/cineflow/pipelines/: ingest_raw.py  load_warehouse.py
src/cineflow/storage/: mongo_client.py  postgres_admin.py  postgres_client.py
src/cineflow/tools/: convert_ml100k.py
src/cineflow/utils/: config.py
test/integration/: test_api_smoke.py  test_genres_endpoint.py  test_pipeline_and_api.py
test/unit/: test_dq.py  test_imports.py
